# QEpgViewer

./: .gitignore  3sat.de_2016-07-15.xml  CMakeLists.txt  Channel.cpp  Channel.h  ChannelView.cpp  ChannelView.h  EpgView.cpp  EpgView.h  Programme.cpp  ProgrammeView.cpp  ProgrammeView.h  QEpgViewer.kdev4  README.md  TODO.md  channels-Germany.xml  main.cpp  qtableviewtest.cpp
.kdev4/: QEpgViewer.kdev4
src/: CMakeLists.txt  Channel.h  EpgView.cpp  EpgView.h  Programme.h  ProgrammeView.h  QDomNodeIterator.h  filedownloader.cpp  filedownloadertest.cpp  main.cpp
